--- a/demo/index.html
+++ b/demo/index.html
@@ -8,11 +8,27 @@
 </head>
 <body>
 
+	<table>
+		<thead>
+			<tr>
+				<th colspan="2">annie</th>
+			</tr>
+		</thead>
+		<tbody>
+		</tbody>
+	</table>
+
 
 	<script src="../annie.js"></script>
 	<script>
 
-		console.log(annie);
+		var html = '';
+
+		for (var key in annie) {
+			html += '<tr><td>' + key + '</td><td>' + annie[key] + '</td></tr>';
+		}
+
+		document.getElementsByTagName('tbody')[0].innerHTML = html;
 
 	</script>
 
